# ptp-notification-armada-app

./: .gitignore  .gitreview  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  centos_iso_image.inc  centos_pkg_dirs_containers  debian_bullseye_iso_image_std.inc  debian_pkg_dirs  debian_stable_docker_images.inc  debian_stable_wheels.inc  debian_trixie_pkg_dirs_std  requirements.txt  test-requirements.txt  tox.ini
api-ref/source/: api_ptp_notifications_definition_v1.rst  api_ptp_notifications_definition_v2.rst  conf.py  index.rst
doc/: requirements.txt
doc/source/: conf.py  index.rst
locationservice-base/centos/: Dockerfile  locationservice-base.stable_docker_image
locationservice-base/debian/: Dockerfile  locationservice-base.stable_docker_image
notificationclient-base/centos/: Dockerfile  (+1 more)
python3-k8sapp-ptp-notification/k8sapp_ptp_notification/: .stestr.conf  pylint.rc  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
python3-k8sapp-ptp-notification/k8sapp_ptp_notification/k8sapp_ptp_notification/armada/: __init__.py  manifest_ptp_notification.py
python3-k8sapp-ptp-notification/k8sapp_ptp_notification/k8sapp_ptp_notification/common/: constants.py
python3-k8sapp-ptp-notification/k8sapp_ptp_notification/k8sapp_ptp_notification/helm/: psp_rolebinding.py  ptp_notification.py
python3-k8sapp-ptp-notification/k8sapp_ptp_notification/k8sapp_ptp_notification/lifecycle/: lifecycle_ptp_notification.py
python3-k8sapp-ptp-notification/k8sapp_ptp_notification/k8sapp_ptp_notification/tests/: test_plugins.py  test_ptp.py
(+298 files in other folders)
