[metadata]
name = k8sapp-ptp-notification
summary = StarlingX sysinv extensions for ptp-notification
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache 2.0
author = StarlingX
author-email = starlingx-discuss@lists.starlingx.io
home-page = https://www.starlingx.io/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    k8sapp_ptp_notification

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
systemconfig.helm_applications =
    ptp-notification = systemconfig.helm_plugins.ptp_notification

systemconfig.helm_plugins.ptp_notification =
    001_ptp-notification = k8sapp_ptp_notification.helm.ptp_notification:PTPNotificationHelm

systemconfig.app_lifecycle =
    ptp-notification = k8sapp_ptp_notification.lifecycle.lifecycle_ptp_notification:PtpNotificationAppLifecycleOperator

[bdist_wheel]
universal = 1
